# lhmp-old

./: .gitignore  AUTHORS.md  COMPILE.md  LHMP.sln  STRUCTURE.md  TODO_GENERATED
Browser/: compile.bat  manifest.xml
Browser/LHMP_Browser/: LHMP_Browser.pro  LHMP_Browser.pro.user.7884ea8  LHMP_Browser.pro.user.9769a12  clhmpquery.cpp  clhmpquery.h  launcher.cpp  launcher.cpp.old  launcher.h  launcher.rc  launcher.ui  main.cpp  resources.qrc  settings.cpp  settings.h  settings.ui  udpwrapper.cpp  udpwrapper.h
Browser/build-LHMP_Browser-Desktop-Release/: Makefile  Makefile.Debug  Makefile.Release  ui_launcher.h  ui_settings.h
Client/: AntiCheat.cpp  AntiCheat.h  CChat.cpp  CChat.h  CColoredText.cpp  CColoredText.h  CCore.cpp  CCore.h  CCrashHandler.cpp  CDirect3DDevice8Proxy.h  CDirectInput8DeviceProxy.h  CDirectInput8Proxy.h  CEngineStack.cpp  CEntity.cpp  CEntity.h  CEventRegistrar.cpp  CFileSystem.h  CFileTransfer.cpp  CFileTransfer.h  CFont.cpp  CFont.h  CGame.cpp  CGame.h  CGameSync.cpp  CGameSync.h  CGraphics.cpp  CGraphics.h  CHooks.cpp  CIngameMenu.cpp  CIngameMenu.h  CInterpolation.cpp  CInterpolation.h  CKeyboard.cpp  CLocalPlayer.cpp  CLocalPlayer.h  CLog.cpp  CLog.h  CNametags.cpp  CNetwork.cpp  CNetwork.h  (+20 more)
CrashHandler/: CrashHandler.csproj  Form1.resx
Debug/: server.ini
Installer/: installer.iss
Loader/: Loader.vcxproj  Main.cpp  inject.cpp
MafiaSDK/: MafiaSDK.h  MafiaSDK.vcxproj  MafiaSDK.vcxproj.filters
MafiaSDK/Engine/: I3D_Frame.hpp  I3D_Light.hpp  (+3 more)
MasterList/: CCore.h  MasterList.vcxproj
Others/: LICENSE  todo_check.bat
Server/: CBanSystem.cpp  CConfig.cpp  CConsole.cpp  CConsole.h  CCore.cpp  CCore.h  CDoorPool.cpp  CEntity.cpp  CEntity.h  CEventRegistrar.cpp  CEventRegistrar.h  CFileTransfer.cpp  CFileTransfer.h  CGameMode.cpp  CLog.cpp  CMasterServer.cpp  CMasterServer.h  CNetworkManager.cpp  CNetworkManager.h  CPickup.cpp  CPickup.h  CPickupPool.h  CPlayer.cpp  CPlayer.h  CPlayerPool.h  CQueryServer.cpp  CQueryServer.h  CScript.cpp  CScript.h  CScripts.cpp  CScripts.h  CTickManager.cpp  CTickManager.h  CTimer.h  CTimerPool.cpp  CTimerPool.h  CVehicle.cpp  CVehicle.h  CVehiclePool.h  IncreasedLimits.cpp  (+10 more)
_Old/: browser.exe.config  config - Copy.txt  config.txt
browser-new/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  ServerBrowser.csproj
sdks/ezsquirrel/: CMakeLists.txt  README.md
sdks/ezsquirrel/sqstdlib/: CMakeLists.txt
sdks/ezsquirrel/squirrel/: CMakeLists.txt
shared/: lhmp_structures.h  lhmp_tools.h  lhmp_version.h  structures.h
(+119 files in other folders)
